--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 			<div class="row">
 				<div class="col-lg-4 col-md-3">
 					<div class="logo">
-						<h2 class="site-logo">Riddle</h2>
+						<h2 class="site-logo">Wilawan Yungyeun</h2>
 					</div>
 				</div>
 				<div class="col-lg-8 col-md-9">
