--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
 			<div class="row">
 				<div class="col-lg-4 col-md-3">
 					<div class="logo">
-						<h2 class="site-logo">Riddle</h2>
+						<h2 class="site-logo">Wilawan Yungyeun</h2>
 					</div>
 				</div>
 				<div class="col-lg-8 col-md-9">
@@ -64,7 +64,7 @@
 		<div class="container text-center">
 			<div class="row">
 				<div class="col-xl-10 offset-xl-1">
-					<h2 class="section-title">I’m a freelance <span>digital designer</span>, with +10 years of experience</h2>
+					<h2 class="section-title">I’m a 4th year student<span> Majoring in Information Technology</span>, with +10 years of experience</h2>
 				</div>
 			</div>
 		</div>
