--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@
 		<div class="container text-center">
 			<div class="row">
 				<div class="col-xl-10 offset-xl-1">
-					<h2 class="section-title">I’m a 4th year student<span> Majoring in Information Technology</span>, with +10 years of experience</h2>
+					<h2 class="section-title">I’m a 4th year student<span> Majoring in Information Technology</span>
 				</div>
 			</div>
 		</div>
