--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Riddle - Portfolio Template</title>
+	<title>Portfolio</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Riddle - Portfolio Template">
 	<meta name="keywords" content="portfolio, riddle, onepage, creative, html">
@@ -45,7 +45,6 @@
 						<ul>
 							<li><a href="home.html">Home</a></li>
 							<li><a href="about.html">About</a></li>
-							<li><a href="home-2.html">Work</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</nav>
@@ -76,12 +75,12 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6">
-					<p>My name is Wilawan Yungyeun. You can call me <font color="Orchid">May</font>. I'm 4th year student at <font color="ForestGreen">RMUTK</font>. I studying Information Technology. I was born in 5 April 1997. I live with my parents in Bangkok. I have six liltle cats. My dream is <font color="SlateBlue">to find my dream.</font> </p>
+					<p>My name is <font color="BlueViolet">Wilawan Yungyeun</font>. You can call me <font color="DarkViolet">May</font>. I'm <font color="Purple">4th year</font> student at <font color="ForestGreen">RMUTK</font>. I studying <font color="PaleGoldenrod">Information Technology</font>. I was born in <font color="MediumOrchid">5 April 1997</font>. I live with my parents in Bangkok. I have <font color="LightPink">six liltle cats</font>. I enjoy taking a <font color="RosyBrown">picture</font> and <font color="IndianRed">camera is necessary</font>. My dream is <font color="SlateBlue">to find my dream.</font> </p>
 					<div class="row mt-5">
-						<div class="col-md-4">
-							<div class="milestone">
-								
-							</div>
+						<div class="col-lg-5 offset-lg-1">
+						<div class="milestone">
+						</div>
+						<img src ="img/portfolio/Mermaid Awkward (5).png" width ="3000">
 						</div>
 						<div class="col-md-4">
 							<div class="milestone">
@@ -101,7 +100,7 @@
 				<div class="col-lg-5 offset-lg-1">
 					<figure class="pic-frame">
 						<body>
-							<img src = "img/portfolio/abotmeepg">
+							<img src = "img/portfolio/aboutmee.jpg">
 							</body>
 					</figure>
 				</div>
@@ -114,13 +113,10 @@
 	<footer class="footer-section text-center">
 		<div class="container">
 			<h2 class="section-title mb-5"></h2>
-			<a href="" class="site-btn">Get in touch</a>
 			<div class="social-links">
-				<a href=""><span class="fa fa-pinterest"></span></a>
-				<a href=""><span class="fa fa-linkedin"></span></a>
-				<a href=""><span class="fa fa-instagram"></span></a>
-				<a href=""><span class="fa fa-facebook"></span></a>
-				<a href=""><span class="fa fa-twitter"></span></a>
+				<a href="https://www.instagram.com/5.4sat_/"><span class="fa fa-instagram"></span></a>
+				<a href="https://www.facebook.com/sofluffyx5"><span class="fa fa-facebook"></span></a>
+				<a href="https://twitter.com/ggwynee"><span class="fa fa-twitter"></span></a>
 			</div>
 			<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
