--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Riddle - Portfolio Template</title>
+	<title>Portfolio</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Riddle - Portfolio Template">
 	<meta name="keywords" content="portfolio, riddle, onepage, creative, html">
@@ -45,7 +45,6 @@
 						<ul>
 							<li><a href="home.html">Home</a></li>
 							<li><a href="about.heml">About</a></li>
-							<li><a href="home-2.html">Work</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</nav>
@@ -63,46 +62,39 @@
 		<div class="container text-center">
 			<div class="row">
 				<div class="col-xl-10 offset-xl-1">
-					<h2 class="section-title">I’m a freelance <span>digital designer</span>, with +10 years of experience</h2>
+					<h2 class="section-title">I’m a student <span>Information Technology.</span></h2>
 				</div>
 			</div>
 		</div>
 	</section>
 	<!-- intro section end -->
-
-
+	
 	<!-- page section start -->
 	<section class="page-section">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 offset-lg-3 contect-tect">
-					<h2>So, let’s talk</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet pharetra nisl. Vestibulum sollicitudin leo non purus vestibulum placerat. Curabitur ac erat sollicitudin, blandit quam vitae.</p>
+					<h2>Here, If you're intersted.</h2>
+					<p>You can contact me directly via my email or phone.</p>
+					<p>You can follow me on Social Media.</p>
 				</div>
-			</div>
-			<form class="contact-form">
-				<div class="row">
-					<div class="col-md-6">
-						<input type="text" placeholder="Name">
-					</div>
-					<div class="col-md-6">
-						<input type="text" placeholder="E-mail">
-					</div>
-					<div class="col-md-6">
-						<input type="text" placeholder="Subject">
-					</div>
-					<div class="col-md-6">
-						<input type="text" placeholder="How did you hear about us?">
-					</div>
-					<div class="col-md-12">
-						<textarea placeholder="Message"></textarea>
-					</div>
-				</div>
-				<div class="text-center">
-					<button class="site-btn">Send</button>
-				</div>
-			</form>
-		</div>
+				<style>
+						.center {
+						  margin: auto;
+						  width: 60%;
+						  border: 3px solid #73AD21;
+						  padding: 10px;
+						}
+						</style>
+						</head>
+						<body>
+						<div class="center">
+						  <p><b>E-mail: </b>585021001268@rmutk.ac.th</p>
+						  <p><b>Phone: </b>092-437-8960</p>
+						  <p><b>ID Line: </b>extrablue.</p>
+						</div>
+						
+						</body>
 	</section>
 	<!-- page section end -->
 
@@ -110,11 +102,9 @@
 	<footer class="footer-section text-center">
 		<div class="container">
 			<div class="social-links">
-				<a href=""><span class="fa fa-pinterest"></span></a>
-				<a href=""><span class="fa fa-linkedin"></span></a>
-				<a href=""><span class="fa fa-instagram"></span></a>
-				<a href=""><span class="fa fa-facebook"></span></a>
-				<a href=""><span class="fa fa-twitter"></span></a>
+				<a href="https://www.instagram.com/5.4sat_"><span class="fa fa-instagram"></span></a>
+				<a href="https://www.facebook.com/sofluffyx5"><span class="fa fa-facebook"></span></a>
+				<a href="https://twitter.com/ggwynee"><span class="fa fa-twitter"></span></a>
 			</div>
 			<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
