--- a/home.html
+++ b/home.html
@@ -46,7 +46,6 @@
 						<ul>
 							<li><a href="home.html">Home</a></li>
 							<li><a href="about.html">About</a></li>
-							<li><a href="home-2.html">Work</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</nav>
@@ -77,65 +76,63 @@
 		<div class="container">
 			<ul class="portfolio-filter controls">
 				<li class="control" data-filter="all">All</li>
-				<li class="control" data-filter=".web">Web design</li>
-				<li class="control" data-filter=".digital">Digital design</li>
-				<li class="control" data-filter=".rened">3D Renedering</li>
-				<li class="control" data-filter=".brand">Brand Identity</li>
+				<li class="control" data-filter=".web">My Project</li>
+				<li class="control" data-filter=".digital">My Album</li>
 			</ul>
 		</div>                       
 		<div class="container-fluid p-md-0 ">
 			<div class="row portfolios-area">
 				<div class="mix col-lg-6 col-md-6 web">
-					<a href="img/portfolio/1.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/1.jpg">
+					<a href="img/portfolio/pic1.png" class="portfolio-item set-bg" data-setbg="img/portfolio/pic1.png">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>						
 					</a>
 				</div>
 				<div class="mix col-lg-6 col-md-6 digital">
-					<a href="img/portfolio/2.jpg" class="portfolio-item set-bg " data-setbg="img/portfolio/2.jpg">
+					<a href="img/portfolio/glass.jpg" class="portfolio-item set-bg " data-setbg="img/portfolio/glass.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>						
 					</a>
 				</div>
 				<div class="mix col-lg-4 col-md-6 web">
-					<a href="img/portfolio/3.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/3.jpg">
+					<a href="img/portfolio/select.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/select.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>						
 					</a>
 				</div>
 				<div class="mix col-lg-4 col-md-6 digital">
-					<a href="img/portfolio/4.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/4.jpg">
+					<a href="img/portfolio/flower.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/flower.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>						
 					</a>
 				</div>
-				<div class="mix col-lg-4 col-md-6 rened">
-					<a href="img/portfolio/5.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/5.jpg">
+				<div class="mix col-lg-4 col-md-6 web">
+					<a href="img/portfolio/select1.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/select1.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>						
 					</a>
 				</div>
-				<div class="mix col-lg-12 col-md-6 brand">
-					<a href="img/portfolio/6.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/6.jpg">
+				<div class="mix col-lg-12 col-md-6 digital">
+					<a href="img/portfolio/mui2.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/mui2.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>						
 					</a>
 				</div>
-				<div class="mix col-lg-6 col-md-6 rened">
-					<a href="img/portfolio/7.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/7.jpg">
+				<div class="mix col-lg-6 col-md-6 web">
+					<a href="img/portfolio/s04.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/s04.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>						
 					</a>
 				</div>
-				<div class="mix col-lg-6 col-md-6 brand">
-					<a href="img/portfolio/8.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/8.jpg">
+				<div class="mix col-lg-6 col-md-6 digital">
+					<a href="img/portfolio/mui.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/mui.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>						
@@ -153,11 +150,9 @@
 			<h2 class="section-title mb-5">Let’s work together</h2>
 			<a href="" class="site-btn">Get in touch</a>
 			<div class="social-links">
-				<a href=""><span class="fa fa-pinterest"></span></a>
-				<a href=""><span class="fa fa-linkedin"></span></a>
-				<a href=""><span class="fa fa-instagram"></span></a>
-				<a href=""><span class="fa fa-facebook"></span></a>
-				<a href=""><span class="fa fa-twitter"></span></a>
+					<a href="https://www.instagram.com/5.4sat_"><span class="fa fa-instagram"></span></a>
+					<a href="https://www.facebook.com/sofluffyx5"><span class="fa fa-facebook"></span></a>
+					<a href="https://twitter.com/ggwynee"><span class="fa fa-twitter"></span></a>
 			</div>
 			<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
